fix chat word wrap and playlist input

--- a/public/css/chat.styl
+++ b/public/css/chat.styl
@@ -8,7 +8,7 @@
   color #424242
   flex-grow 1
   width 100%
-  word-break break-all
+  word-wrap break-word
   overflow-y scroll
   padding 5px
 
@@ -19,9 +19,6 @@
 #chat-app .username
   font-weight bold
   margin-right 5px
-  float left
-
-#chat-app .text
   float left
 
 #chat-app .info
